<resources>
    <string name="app_name">MaghrebTrip</string>
    <string name="welcome">Welcome</string>
    <string name="notification_number">1</string>
    <string name="search_hint">Search anything...</string>
    <string name="explore">Explore</string>
    <string name="cat1">Hotels</string>
    <string name="cat2">Restaurants</string>
    <string name="cat3">Airports</string>
    <string name="cat4">Monuments</string>
    <string name="cat5">Entertainment</string>
    <string name="cat6">Cities</string>
    <string name="popular_cities">Popular cities</string>
    <string name="see_all">See all</string>
    <string name="city_name">Rabat</string>
    <string name="city_rating">4.5</string>
    <string name="city_description">Rabat is the capital city of Morocco and the country\'s seventh-largest city with an urban population of approximately 580,000 (2014) and a metropolitan population of over 1.2 million. It is also the capital city of the Rabat-Salé-Kénitra administrative region. Rabat is located on the Atlantic Ocean at the mouth of the river Bou Regreg, opposite Salé, the city\'s main commuter town.</string>
    <string name="go_btn">Let\'s Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attraction_name">Hassan Tower</string>
    <string name="attraction_type">Historical landmark</string>
    <string name="attraction_opening_hours">All day at: 15h-17h</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="explore_subtitle">Explore the world of Morocco</string>
    <string name="username">Ahmed</string>
    <string name="hotel_name">Hotel Farah</string>
    <string name="hotel_rating">4.6</string>
    <string name="hotel_description">Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar. Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar. Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar.</string>
    <string name="monument_name">Hassan Tower</string>
    <string name="monument_rating">4.8</string>
    <string name="monument_description">Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar. Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar. Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar.</string>
    <string name="restaurant_name">The View</string>
    <string name="restaurant_rating">4.8</string>
    <string name="restaurant_description">Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar. Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar. Lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar lorem ipsum dolar.</string>
</resources>