<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_background"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/welcome"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <ImageView
                        android:id="@+id/bell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bell" />

                    <ImageView
                        android:id="@+id/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/red_circle"
                        app:layout_constraintBottom_toTopOf="@+id/bell"
                        app:layout_constraintEnd_toEndOf="@+id/bell"
                        app:layout_constraintStart_toEndOf="@+id/bell"
                        app:layout_constraintTop_toTopOf="@+id/bell" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_number"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="@+id/notification"
                        app:layout_constraintEnd_toEndOf="@+id/notification"
                        app:layout_constraintStart_toStartOf="@+id/notification"
                        app:layout_constraintTop_toTopOf="@+id/notification" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="#9AA2AA"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/banner_top"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_banner" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="MaghrebTrip"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/banner_top"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    style="@android:style/Widget.Button"
                    android:background="@drawable/coral_background"
                    android:text="Let's go"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="@+id/banner_top"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="6dp"
                android:text="@string/explore"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="@drawable/category_background"
                    android:gravity="center"
                    android:padding="6dp"
                    android:layout_marginHorizontal="6dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/catIcon1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/baseline_bed_24" />

                    <TextView
                        android:id="@+id/catText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cat1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="@drawable/category_background"
                    android:gravity="center"
                    android:padding="6dp"
                    android:layout_marginHorizontal="6dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/catIcon2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/restaurant_white_24dp" />

                    <TextView
                        android:id="@+id/catText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cat2"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="@drawable/category_background"
                    android:gravity="center"
                    android:padding="6dp"
                    android:layout_marginHorizontal="6dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/catIcon3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/baseline_airplanemode_active_24" />

                    <TextView
                        android:id="@+id/catText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cat3"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/category_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/catIcon4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/monument_white_24dp" />

                    <TextView
                        android:id="@+id/catText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cat4"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/category_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/catIcon5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/entertainment_white_24dp" />

                    <TextView
                        android:id="@+id/catText5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cat5"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/category_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/catIcon6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/city_white_24dp" />

                    <TextView
                        android:id="@+id/catText6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cat6"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>





        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>